trying to set base path again

--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ safe:        true
 auto:        true
 server:      true
 paginate:    1
-baseurl:	 /devlog
-permalink:   ./:month-:day-:year/:title.html
+BASE_PATH:	 /devlog
+permalink:   :year-:month-:day/:title.html
